--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -119,7 +119,7 @@
     "authorize.net": "أوثورايز.نت",
     "authorize_net": "أوثورايز.نت",
     "authorize": {
-      "net":"أوثورايز.نت"
+      "net": "أوثورايز.نت"
     },
     "swich": "سويتش",
     "blinq": "بلينك",
@@ -142,7 +142,7 @@
     "ngenius": "إن جينيوس (نيتوورك إنترناشونال)",
     "network_international": "إن جينيوس (نيتوورك إنترناشونال)",
     "citybank": "سيتي بنك",
-    "city_bank":"سيتي بنك",
+    "city_bank": "سيتي بنك",
     "tbc": "تي بي سي",
     "moyasar": "موياسر",
     "ccavenue": "سي سي أفينيو",
@@ -153,13 +153,13 @@
     "tabpay": "تاب بايمنتس",
     "tap_payments": "تاب بايمنتس",
     "assanpay": "اسان باي",
-    "assan_pay":"اسان باي",
+    "assan_pay": "اسان باي",
     "dialogpay": "ديالوج باي",
     "directpay": "دايركت باي",
     "direct_pay": "دايركت باي",
-    "payzen":"بايزن",
+    "payzen": "بايزن",
     "zerocash": "زيرو كاش",
-    "zero_cash":"زيرو كاش",
+    "zero_cash": "زيرو كاش",
     "null": "-"
   },
   "status": {
@@ -167,9 +167,9 @@
     "success": "ناجح",
     "pending": "قيد الانتظار",
     "failed": "فشل",
-    "active":"نشط",
-    "inactive":"غير نشط",
-    "configure":"تكوين"
+    "active": "نشط",
+    "inactive": "غير نشط",
+    "configure": "تكوين"
   },
   "download": {
     "title": "تحميل",
@@ -274,86 +274,131 @@
       "description_placeholder": "اكتب شيئاً..."
     }
   },
-   "reconciliationReportPage": {
+  "reconciliationReportPage": {
     "empty_config_desc": "لعرض تقرير التسوية، يرجى إكمال التكوين في الإعدادات.",
     "go_to_settings": "الذهاب إلى إعدادات التكوين",
     "alert_message": "لا يمكن استخراج بيانات لأكثر من 7 أيام (على حجم كبير من الطلبات يرجى استخراج طلب ليوم واحد)",
-    "table":{
-      "title":"بيانات علامة تبويب تقرير التسوية",
-      "order_no":"رقم الطلب",
-      "transaction_id":"معرّف المعاملة",
-      "email":"البريد الإلكتروني",
-      "payment_session":"جلسة الدفع",
-      "payment_source":"مصدر الدفع",
-      "amount":"المبلغ",
-      "order_amount":"مبلغ الطلب"
-     },
-     "download_csv": "تحميل CSV"
-   },
-   "reconciliation_report_snackbar": {
-    "data_loaded":"تم تحميل بيانات تقرير التسوية بنجاح",
-    "invalid_date":"لا يمكن استخراج البيانات لأكثر من 7 أيام",
-    "file_error":"حدث خطأ أثناء تنزيل ملف CSV. يرجى المحاولة مرة أخرى.",
-     "report_downloaded":"تم تنزيل تقرير التسوية بنجاح"
-   },
+    "table": {
+      "title": "بيانات علامة تبويب تقرير التسوية",
+      "order_no": "رقم الطلب",
+      "transaction_id": "معرّف المعاملة",
+      "email": "البريد الإلكتروني",
+      "payment_session": "جلسة الدفع",
+      "payment_source": "مصدر الدفع",
+      "amount": "المبلغ",
+      "order_amount": "مبلغ الطلب"
+    },
+    "download_csv": "تحميل CSV"
+  },
+  "reconciliation_report_snackbar": {
+    "data_loaded": "تم تحميل بيانات تقرير التسوية بنجاح",
+    "invalid_date": "لا يمكن استخراج البيانات لأكثر من 7 أيام",
+    "file_error": "حدث خطأ أثناء تنزيل ملف CSV. يرجى المحاولة مرة أخرى.",
+    "report_downloaded": "تم تنزيل تقرير التسوية بنجاح"
+  },
   "payment-providers_page": {
     "country_filter_label": "البلد",
     "status_filter_label": "الحالة",
     "payment_provider_filter_label": "مزود الدفع",
-    "buttons":{
+    "buttons": {
       "overview": "نظرة عامة",
       "configuration": "التكوين"
     },
-    "text":{
-      "transactions":"المعاملات",
-      "volume":"الحجم",
-      "success_rate":"معدل النجاح",
-      "unumpay_charges":"يونم باي رسوم",
-      "configure":"تكوين",
-      "select_provider": "يرجى اختيار مزود خدمة الدفع"
+    "text": {
+      "transactions": "المعاملات",
+      "volume": "الحجم",
+      "success_rate": "معدل النجاح",
+      "unumpay_charges": "يونم باي رسوم",
+      "configure": "تكوين",
+      "select_provider": "يرجى اختيار مزود خدمة الدفع",
+      "return_url":" رابط العودة",
+      "listner_url":" رابط المستمع",
+      "response_url":" رابط الاستجابة",
+      "select_all":"تحديد الكل",
+      "deselect_all":"إلغاء تحديد الكل",
+      "callback_return_url":" رابط الاستدعاء/العودة"
     },
-    "form":{ 
-      "client_name":"اسم العميل",
-      "client_name_required":"اسم العميل مطلوب",
-      "merchant_id":"معرّف التاجر",
-      "merchant_id_required":"معرّف التاجر مطلوب",
-      "merchant_secret":"سر التاجر",
-      "merchant_secret_required":"سر التاجر مطلوب",
-      "user_name":"اسم المستخدم",
-      "user_name_required":"اسم المستخدم مطلوب",
-      "api_version":"إصدار API",
-      "api_password":"كلمة مرور API",
-      "api_password_required":"كلمة مرور API مطلوبة",
-      "channel_id":"معرّف القناة",
-      "channel_id_required":"معرّف القناة مطلوب",
-      "hide_for_special_countries":"إخفاء للدول الخاصة (رموز الدول مفصولة بفواصل)",
-      "hide_for_special_countries_required":"إخفاء للدول الخاصة مطلوب",
-      "currency_conversion":"تحويل العملة",
-      "switch_currency":"تبديل العملة",
-      "switch_merchant_store_currency":"تبديل عملة متجر التاجر",
-      "switch_merchant_account_currency":"تبديل عملة حساب التاجر",
-      "switch_conversion_rate":"تبديل سعر التحويل",
-      "switch_conversion_rate_required":"سعر التحويل مطلوب",
-      "multiple_currency_text":"التعامل بعملات متعددة",
-      "multiple_currency":"عملات متعددة",
+    "form": {
+      "client_name": "اسم العميل",
+      "client_name_required": "اسم العميل مطلوب",
+      "client_id":" معرّف العميل",
+      "client_id_required":" معرّف العميل مطلوب",
+      "merchant_id": "معرّف التاجر",
+      "merchant_id_required": "معرّف التاجر مطلوب",
+      "store_id": "معرّف المتجر",
+      "store_id_required": "معرّف المتجر مطلوب",
+      "merchant_secret": "سر التاجر",
+      "merchant_secret_required": "سر التاجر مطلوب",
+      "secret_key": "المفتاح السري",
+      "secret_key_required": "المفتاح السري مطلوب",
+      "user_name": "اسم المستخدم",
+      "user_name_required": "اسم المستخدم مطلوب",
+      "merchant_user_name": "اسم مستخدم التاجر",
+      "merchant_user_name_required": "اسم مستخدم التاجر مطلوب",
+      "merchant_password": "كلمة مرور التاجر",
+      "merchant_password_required": "كلمة مرور التاجر مطلوبة",
+      "merchant_key1": "مفتاح التاجر 1",
+      "merchant_key1_required": "مفتاح التاجر 1 مطلوب",
+      "merchant_key2": "مفتاح التاجر 2",
+      "merchant_key2_required": "مفتاح التاجر 2 مطلوب",
+      "api_username": "اسم مستخدم API",
+      "api_username_required": "اسم مستخدم API مطلوب",
+      "api_version": "إصدار API",
+      "transaction_type": "نوع المعاملة",
+      "transaction_type_required": "نوع المعاملة مطلوب",
+      "transaction_key": "مفتاح المعاملة",
+      "transaction_key_required": "مفتاح المعاملة مطلوب",
+      "api_password": "كلمة مرور API",
+      "api_password_required": "كلمة مرور API مطلوبة",
+      "api_login_id": "معرّف تسجيل دخول API",
+      "api_login_id_required": "معرّف تسجيل دخول API مطلوب",
+      "channel_id": "معرّف القناة",
+      "channel_id_required": "معرّف القناة مطلوب",
+      "merchant_hash": "تجزئة التاجر",
+      "merchant_hash_required": "تجزئة التاجر مطلوبة",
+      "hide_for_special_countries": "إخفاء للدول الخاصة (رموز الدول مفصولة بفواصل)",
+      "hide_for_special_countries_required": "إخفاء للدول الخاصة مطلوب",
+      "select_country_code":" اختر رمز البلد",
+      "currency_conversion": "تحويل العملة",
+      "switch_currency": "تبديل العملة",
+      "switch_merchant_store_currency": "تبديل عملة متجر التاجر",
+      "switch_merchant_account_currency": "تبديل عملة حساب التاجر",
+      "switch_conversion_rate": "تبديل سعر التحويل",
+      "switch_conversion_rate_required": "سعر التحويل مطلوب",
+      "multiple_currency_text": "التعامل بعملات متعددة",
+      "multiple_currency": "عملات متعددة",
       "other_currency_merchant_id": "معرّف التاجر للعملة الأخرى",
       "other_currency_api_username": "اسم مستخدم API للعملة الأخرى",
       "other_currency_api_password": "كلمة مرور API للعملة الأخرى",
-      "merchant_store_currency":"عملة متجر التاجر",
-      "merchant_account_currency":"عملة حساب التاجر",
-      "conversion_rate":"سعر التحويل",
-      "conversion_rate_required":"سعر التحويل مطلوب",
-      "payment_provider_status":"حالة مزود الدفع",
-      "message":"رسالة",
-      "message_placeholder":"سيتم عرض الرسالة في اختيار المزود",
-      "client_description":"وصف العميل",
-      "form_validation":"يرجى ملء جميع الحقول المطلوبة"
+      "merchant_store_currency": "عملة متجر التاجر",
+      "merchant_account_currency": "عملة حساب التاجر",
+      "conversion_rate": "سعر التحويل",
+      "conversion_rate_required": "سعر التحويل مطلوب",
+      "payment_provider_status": "حالة مزود الدفع",
+      "message": "رسالة",
+      "message_placeholder": "سيتم عرض الرسالة في اختيار المزود",
+      "client_description": "وصف العميل",
+      "form_validation": "يرجى ملء جميع الحقول المطلوبة",
+      "access_code": "رمز الوصول",
+      "access_code_required": "رمز الوصول مطلوب",
+      "enc_key": "مفتاح التشفير",
+      "enc_key_required": "مفتاح التشفير مطلوب",
+      "phone_number": "رقم الهاتف",
+      "phone_number_required": "رقم الهاتف مطلوب",
+      "email_address": "عنوان البريد الإلكتروني",
+      "email_address_required": "عنوان البريد الإلكتروني مطلوب",
+      "email_address_invalid": "عنوان البريد الإلكتروني غير صالح"
     }
   },
   "payment-providers_snackbar": {
     "provider_data_loaded": "تم تحميل بيانات مزود الدفع بنجاح",
     "alfalah_mpgs_settings_saved": "تم حفظ إعدادات الفلاح (إم بي جي إس) بنجاح",
-    "abhipay_settings_saved": "تم حفظ إعدادات أبهي باي بنجاح"
+    "abhipay_settings_saved": "تم حفظ إعدادات أبهي باي بنجاح",
+    "apg_settings_saved": "تم حفظ إعدادات الفلاح (ايه پي جي) بنجاح",
+    "authorize_settings_saved": "تم حفظ إعدادات أوثورايز.نت بنجاح",
+    "blinq_settings_saved": "تم حفظ إعدادات بلينك بنجاح",
+    "bop_settings_saved": "تم حفظ إعدادات بنك البنجاب بنجاح",
+    "ccavenue_settings_saved": "تم حفظ إعدادات سي سي أفينيو بنجاح"
   },
   "$vuetify": {
     "open": "فتح",
@@ -399,7 +444,7 @@
     }
   },
   "countries": {
-    "All":"الكل",
+    "All": "الكل",
     "AF": "أفغانستان",
     "AX": "جزر أولاند",
     "AL": "ألبانيا",
