--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -119,7 +119,7 @@
     "authorize.net": "Authorize.net",
     "authorize_net": "Authorize.net",
     "authorize": {
-      "net":"Authorize.net"
+      "net": "Authorize.net"
     },
     "swich": "SWICH",
     "blinq": "BLINQ",
@@ -142,7 +142,7 @@
     "ngenius": "Network International",
     "network_international": "Network International",
     "citybank": "City Bank",
-    "city_bank":"City Bank",
+    "city_bank": "City Bank",
     "tbc": "TBC",
     "moyasar": "MOYASAR",
     "ccavenue": "CCAVENUE",
@@ -153,13 +153,13 @@
     "tabpay": "TAP Payments",
     "tap_payments": "TAP Payments",
     "assanpay": "Assan Pay",
-    "assan_pay":"Assan Pay",
+    "assan_pay": "Assan Pay",
     "dialogpay": "Dialog Pay",
     "directpay": "Direct Pay",
     "direct_pay": "Direct Pay",
-    "payzen":"Payzen",
+    "payzen": "Payzen",
     "zerocash": "Zerocash",
-    "zero_cash":"Zerocash",
+    "zero_cash": "Zerocash",
     "null": "-"
   },
   "status": {
@@ -167,9 +167,9 @@
     "success": "success",
     "pending": "pending",
     "failed": "failed",
-    "active":"active",
-    "inactive":"inactive",
-    "configure":"configure"
+    "active": "active",
+    "inactive": "inactive",
+    "configure": "configure"
   },
   "download": {
     "title": "Download",
@@ -278,82 +278,127 @@
     "empty_config_desc": "To view the reconciliation report, please complete the configuration in Settings.",
     "go_to_settings": "Go To Configuration Setting",
     "alert_message": "Can't extract data of more than 7 days (On huge volume of orders please extract order of single day)",
-    "table":{
-      "title":"Reconciliation Report Tab Data",
-      "order_no":"Order No",
-      "transaction_id":"Transaction ID",
-      "email":"Email",
-      "payment_session":"Payment Session",
-      "payment_source":"Payment Source",
-      "amount":"Amount",
-      "order_amount":"Order Amount"
+    "table": {
+      "title": "Reconciliation Report Tab Data",
+      "order_no": "Order No",
+      "transaction_id": "Transaction ID",
+      "email": "Email",
+      "payment_session": "Payment Session",
+      "payment_source": "Payment Source",
+      "amount": "Amount",
+      "order_amount": "Order Amount"
     },
-    "download_csv":"Download CSV"
+    "download_csv": "Download CSV"
   },
   "reconciliation_report_snackbar": {
     "data_loaded": "Reconciliation report data loaded successfully",
-    "invalid_date":"Can't Extract data of more than 7 days",
-    "file_error":"Can't Extract data of more than 7 days",
-    "report_downloaded":"Reconciliation report downloaded successfully"
+    "invalid_date": "Can't Extract data of more than 7 days",
+    "file_error": "Can't Extract data of more than 7 days",
+    "report_downloaded": "Reconciliation report downloaded successfully"
   },
   "payment-providers_page": {
     "country_filter_label": "Country",
     "status_filter_label": "Status",
     "payment_provider_filter_label": "Payment Provider",
-    "buttons":{
+    "buttons": {
       "overview": "Overview",
       "configuration": "Configuration"
     },
-    "text":{
-      "transactions":"Transactions",
-      "volume":"Volume",
-      "success_rate":"Success Rate",
-      "unumpay_charges":"Unumpay Charges",
-      "configure":"Configure",
-      "select_provider":"Please select a Payment Service Provider"
+    "text": {
+      "transactions": "Transactions",
+      "volume": "Volume",
+      "success_rate": "Success Rate",
+      "unumpay_charges": "Unumpay Charges",
+      "configure": "Configure",
+      "select_provider": "Please select a Payment Service Provider",
+      "return_url":" Return URL",
+      "listner_url":" Listener URL",
+      "response_url":" Response URL",
+      "select_all":"Select All",
+      "deselect_all":"Deselect All",
+      "callback_return_url":" Callback/Return URL"
     },
-    "form":{ 
-      "client_name":"Client Name",
-      "client_name_required":"Client Name is required",
-      "merchant_id":"Merchant ID",
-      "merchant_id_required":"Merchant ID is required",
-      "merchant_secret":"Merchant Secret",
-      "merchant_secret_required":"Merchant Secret is required",
-      "user_name":"User Name",
-      "user_name_required":"User Name is required",
-      "api_version":"API Version",
-      "api_password":"API Password",
-      "channel_id":"Channel ID",
-      "channel_id_required":"Channel ID is required",
-      "api_password_required":"API Password is required",
-      "hide_for_special_countries":"Hide For Special Countries (Countries Code Commas Seperated)",
-      "hide_for_special_countries_required":"Hide For Special Countries is required",
-      "currency_conversion":"Currency Conversion",
-      "switch_currency":"Switch Currency",
-      "switch_merchant_store_currency":"Switch Merchant Store Currency",
-      "switch_merchant_account_currency":"Switch Merchant Account Currency",
-      "switch_conversion_rate":"Switch Conversion Rate",
-      "switch_conversion_rate_required":"Conversion Rate is required",
-      "multiple_currency_text":"Multiple Currency Dealing",
-      "multiple_currency":"Multiple Currency",
+    "form": {
+      "client_name": "Client Name",
+      "client_name_required": "Client Name is required",
+      "client_id":" Client ID",
+      "client_id_required":" Client ID is required",
+      "merchant_id": "Merchant ID",
+      "merchant_id_required": "Merchant ID is required",
+      "store_id": "Store ID",
+      "store_id_required": "Store ID is required",
+      "merchant_secret": "Merchant Secret",
+      "merchant_secret_required": "Merchant Secret is required",
+      "secret_key": "Secret Key",
+      "secret_key_required": "Secret Key is required",
+      "user_name": "User Name",
+      "user_name_required": "User Name is required",
+      "merchant_user_name": "Merchant Username",
+      "merchant_user_name_required": "Merchant Username is required",
+      "merchant_password": "Merchant Password",
+      "merchant_password_required": "Merchant Password is required",
+      "merchant_key1": "Merchant Key1",
+      "merchant_key1_required": "Merchant Key1 is required",
+      "merchant_key2": "Merchant Key2",
+      "merchant_key2_required": "Merchant Key2 is required",
+      "api_username": "API Username",
+      "api_username_required": "API Username is required",
+      "api_version": "API Version",
+      "api_password": "API Password",
+      "api_password_required": "API Password is required",
+      "api_login_id": "API Login ID",
+      "api_login_id_required": "API Login ID is required",
+      "transaction_type": "Transaction Type",
+      "transaction_type_required": "Transaction Type is required",
+      "transaction_key":" Transaction Key",
+      "transaction_key_required":" Transaction Key is required",
+      "channel_id": "Channel ID",
+      "channel_id_required": "Channel ID is required",
+      "merchant_hash": "Merchant Hash",
+      "merchant_hash_required": "Merchant Hash is required",
+      "hide_for_special_countries": "Hide For Special Countries (Countries Code Commas Seperated)",
+      "hide_for_special_countries_required": "Hide For Special Countries is required",
+      "select_country_code":" Select Country Code",
+      "currency_conversion": "Currency Conversion",
+      "switch_currency": "Switch Currency",
+      "switch_merchant_store_currency": "Switch Merchant Store Currency",
+      "switch_merchant_account_currency": "Switch Merchant Account Currency",
+      "switch_conversion_rate": "Switch Conversion Rate",
+      "switch_conversion_rate_required": "Conversion Rate is required",
+      "multiple_currency_text": "Multiple Currency Dealing",
+      "multiple_currency": "Multiple Currency",
       "other_currency_merchant_id": "Other Currency Merchant ID",
       "other_currency_api_username": "Other Currency API Username",
       "other_currency_api_password": "Other Currency API Password",
-      "merchant_store_currency":"Merchant Store Currency",
-      "merchant_account_currency":"Merchant Account Currency",
-      "conversion_rate":"Conversion Rate",
-      "conversion_rate_required":"Conversion Rate is required",
-      "payment_provider_status":"Payment Provider Status",
-      "message":"Message",
-      "message_placeholder":"Message will be showing on Provider Selection",
-      "client_description":"Client Description",
-      "form_validation":"Please fill all required fields"
+      "merchant_store_currency": "Merchant Store Currency",
+      "merchant_account_currency": "Merchant Account Currency",
+      "conversion_rate": "Conversion Rate",
+      "conversion_rate_required": "Conversion Rate is required",
+      "payment_provider_status": "Payment Provider Status",
+      "message": "Message",
+      "message_placeholder": "Message will be showing on Provider Selection",
+      "client_description": "Client Description",
+      "form_validation": "Please fill all required fields",
+      "access_code": "Access Code",
+      "access_code_required": "Access Code is required",
+      "enc_key": "Enc Key",
+      "enc_key_required": "Enc Key is required",
+      "phone_number": "Phone Number",
+      "phone_number_required": "Phone Number is required",
+      "email_address": "Email Address",
+      "email_address_required": "Email Address is required",
+      "email_address_invalid": "Email Address is invalid"
     }
   },
   "payment-providers_snackbar": {
     "provider_data_loaded": "Payment providers loaded successfully",
     "alfalah_mpgs_settings_saved": "Alfalah (MPGS) settings saved successfully",
-    "abhipay_settings_saved": "Abhipay settings saved successfully"
+    "abhipay_settings_saved": "Abhipay settings saved successfully",
+    "apg_settings_saved": "Alfalah (APG) settings saved successfully",
+    "authorize_settings_saved": "Authorize.net settings saved successfully",
+    "blinq_settings_saved": "BLINQ settings saved successfully",
+    "bop_settings_saved": "BOP settings saved successfully",
+    "ccavenue_settings_saved": "CCAVENUE settings saved successfully"
   },
   "$vuetify": {
     "open": "Open",
@@ -366,7 +411,7 @@
     "date_range_placeholder": "Select date range",
     "no_data_available": "No record found",
     "loading": "Loading...",
-    "only_english_allowed":"Only English characters are allowed",
+    "only_english_allowed": "Only English characters are allowed",
     "noDataText": "No record found",
     "input": {
       "appendAction": "Append action"
@@ -399,7 +444,7 @@
     }
   },
   "countries": {
-    "All":"all",
+    "All": "all",
     "AF": "Afghanistan",
     "AX": "Åland Islands",
     "AL": "Albania",
