--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -119,7 +119,7 @@
     "authorize.net": "Authorize.net",
     "authorize_net": "Authorize.net",
     "authorize": {
-      "net":"Authorize.net"
+      "net": "Authorize.net"
     },
     "swich": "SWICH",
     "blinq": "BLINQ",
@@ -142,7 +142,7 @@
     "ngenius": "Network International",
     "network_international": "Network International",
     "citybank": "City Bank",
-    "city_bank":"City Bank",
+    "city_bank": "City Bank",
     "tbc": "TBC",
     "moyasar": "MOYASAR",
     "ccavenue": "CCAVENUE",
@@ -153,13 +153,13 @@
     "tabpay": "TAP Paiements",
     "tap_payments": "TAP Paiements",
     "assanpay": "Assan Pai",
-    "assan_pay":"Assan Pai",
+    "assan_pay": "Assan Pai",
     "dialogpay": "Dialog Pay",
     "directpay": "Direct Pay",
     "direct_pay": "Direct Pay",
-    "payzen":"Payzen",
+    "payzen": "Payzen",
     "zerocash": "Zerocash",
-    "zero_cash":"Zerocash",
+    "zero_cash": "Zerocash",
     "null": "-"
   },
   "status": {
@@ -167,9 +167,9 @@
     "success": "Succès",
     "pending": "En attente",
     "failed": "Échec",
-    "active":"Actif",
-    "inactive":"Inactif",
-    "configure":"Configurer"
+    "active": "Actif",
+    "inactive": "Inactif",
+    "configure": "Configurer"
   },
   "download": {
     "title": "Télécharger",
@@ -274,86 +274,131 @@
       "description_placeholder": "Écrivez quelque chose..."
     }
   },
-   "reconciliationReportPage": {
+  "reconciliationReportPage": {
     "empty_config_desc": "Pour voir le rapport de rapprochement, veuillez compléter la configuration dans les Paramètres.",
     "go_to_settings": "Aller aux paramètres de configuration",
     "alert_message": "Impossible d'extraire des données de plus de 7 jours (Pour un volume important de commandes, veuillez extraire les commandes d'une seule journée)",
-    "table":{
-      "title":" données de l'onglet de rapport de rapprochement",
-      "order_no":"Numéro de commande",
-      "transaction_id":"ID de transaction",
-      "email":"Email",
-      "payment_session":"Session de paiement",
-      "payment_source":"Source de paiement",
-      "amount":"Montant",
-      "order_amount":"Montant de la commande"
-     },
-     "download_csv": "Télécharger CSV"
-   },
-   "reconciliation_report_snackbar": {
+    "table": {
+      "title": " données de l'onglet de rapport de rapprochement",
+      "order_no": "Numéro de commande",
+      "transaction_id": "ID de transaction",
+      "email": "Email",
+      "payment_session": "Session de paiement",
+      "payment_source": "Source de paiement",
+      "amount": "Montant",
+      "order_amount": "Montant de la commande"
+    },
+    "download_csv": "Télécharger CSV"
+  },
+  "reconciliation_report_snackbar": {
     "data_loaded": "Données du rapport de rapprochement chargées avec succès",
-    "invalid_date":"Impossible d'extraire des données de plus de 7 jours",
-    "file_error":"Échec du téléchargement du fichier. Veuillez réessayer.",
-     "report_downloaded":"Rapport de rapprochement téléchargé avec succès"
-   },
+    "invalid_date": "Impossible d'extraire des données de plus de 7 jours",
+    "file_error": "Échec du téléchargement du fichier. Veuillez réessayer.",
+    "report_downloaded": "Rapport de rapprochement téléchargé avec succès"
+  },
   "payment-providers_page": {
     "country_filter_label": "Pays",
     "status_filter_label": "Statut",
     "payment_provider_filter_label": "Fournisseur de paiement",
-    "buttons":{
+    "buttons": {
       "overview": "Aperçu",
       "configuration": "Configuration"
     },
-    "text":{
-      "transactions":"Transactions",
-      "volume":"Volume",
-      "success_rate":"Taux de réussite",
-      "unumpay_charges":"Frais Unumpay",
-      "configure":"Configurer",
-      "select_provider": "Veuillez sélectionner un fournisseur de services de paiement"
+    "text": {
+      "transactions": "Transactions",
+      "volume": "Volume",
+      "success_rate": "Taux de réussite",
+      "unumpay_charges": "Frais Unumpay",
+      "configure": "Configurer",
+      "select_provider": "Veuillez sélectionner un fournisseur de services de paiement",
+      "return_url":" URL de retour",
+      "listner_url":" URL de l'auditeur",
+      "response_url":" URL de réponse",
+      "select_all":"Tout sélectionner",
+      "deselect_all":"Tout désélectionner",
+      "callback_return_url":" URL de rappel/retour"
     },
-    "form":{ 
-      "client_name":"Nom du client",
-      "client_name_required":"Le nom du client est requis",
-      "merchant_id":"ID du marchand",
-      "merchant_id_required":"L'ID du marchand est requis",
-      "merchant_secret":"Secret du marchand",
-      "merchant_secret_required":"Le secret du marchand est requis",
-      "user_name":"Nom d'utilisateur",
-      "user_name_required":"Le nom d'utilisateur est requis",
-      "channel_id":"ID de canal",
-      "channel_id_required":"L'ID de canal est requis",
-      "api_version":"Version API",
-      "api_password":"Mot de passe API",
-      "api_password_required":"Le mot de passe API est requis",
-      "hide_for_special_countries":"Masquer pour les pays spéciaux (codes pays séparés par des virgules)",
-      "hide_for_special_countries_required":"Masquer pour les pays spéciaux est requis",
-      "currency_conversion":"Conversion de devise",
-      "switch_currency":"Changer de devise",
-      "switch_merchant_store_currency":"Changer la devise du magasin du commerçant",
-      "switch_merchant_account_currency":"Changer la devise du compte du commerçant",
-      "switch_conversion_rate":"Changer le taux de conversion",
-      "switch_conversion_rate_required":"Le taux de conversion est requis",
-      "multiple_currency_text":"Gestion de plusieurs devises",
-      "multiple_currency":"Devises multiples",
+    "form": {
+      "client_name": "Nom du client",
+      "client_name_required": "Le nom du client est requis",
+      "client_id":" ID du client",
+      "client_id_required":" L'ID du client est requis",
+      "merchant_id": "ID du marchand",
+      "merchant_id_required": "L'ID du marchand est requis",
+      "store_id": "ID du magasin",
+      "store_id_required": "L'ID du magasin est requis",
+      "merchant_secret": "Secret du marchand",
+      "merchant_secret_required": "Le secret du marchand est requis",
+      "secret_key": "Clé secrète",
+      "secret_key_required": "La clé secrète est requise",
+      "merchant_user_name": "Nom d'utilisateur du marchand",
+      "merchant_user_name_required": "Le nom d'utilisateur du marchand est requis",
+      "merchant_password": "Mot de passe du marchand",
+      "merchant_password_required": "Le mot de passe du marchand est requis",
+      "merchant_key1": "Clé du marchand 1",
+      "merchant_key1_required": "La clé du marchand 1 est requise",
+      "merchant_key2": "Clé du marchand 2",
+      "api_username": "Nom d'utilisateur API",
+      "api_username_required": "Le nom d'utilisateur API est requis",
+      "merchant_key2_required": "La clé du marchand 2 est requise",
+      "user_name": "Nom d'utilisateur",
+      "user_name_required": "Le nom d'utilisateur est requis",
+      "channel_id": "ID de canal",
+      "channel_id_required": "L'ID de canal est requis",
+      "merchant_hash": "Hachage du marchand",
+      "merchant_hash_required": "Le hachage du marchand est requis",
+      "api_version": "Version API",
+      "transaction_type": "Type de transaction",
+      "transaction_type_required": "Le type de transaction est requis",
+      "transaction_key":" Clé de transaction",
+      "transaction_key_required":" La clé de transaction est requise",
+      "api_password": "Mot de passe API",
+      "api_password_required": "Le mot de passe API est requis",
+      "api_login_id": "ID de connexion API",
+      "api_login_id_required": "L'ID de connexion API est requis",
+      "hide_for_special_countries": "Masquer pour les pays spéciaux (codes pays séparés par des virgules)",
+      "hide_for_special_countries_required": "Masquer pour les pays spéciaux est requis",
+      "select_country_code":" Sélectionner le code pays",
+      "currency_conversion": "Conversion de devise",
+      "switch_currency": "Changer de devise",
+      "switch_merchant_store_currency": "Changer la devise du magasin du commerçant",
+      "switch_merchant_account_currency": "Changer la devise du compte du commerçant",
+      "switch_conversion_rate": "Changer le taux de conversion",
+      "switch_conversion_rate_required": "Le taux de conversion est requis",
+      "multiple_currency_text": "Gestion de plusieurs devises",
+      "multiple_currency": "Devises multiples",
       "other_currency_merchant_id": "ID du marchand pour autre devise",
       "other_currency_api_username": "Nom d'utilisateur API pour autre devise",
       "other_currency_api_password": "Mot de passe API pour autre devise",
-      "merchant_store_currency":"Devise du magasin du commerçant",
-      "merchant_account_currency":"Devise du compte du commerçant",
-      "conversion_rate":"Taux de conversion",
-      "conversion_rate_required":"Le taux de conversion est requis",
-      "payment_provider_status":"Statut du fournisseur de paiement",
-      "message":"Message",
-      "message_placeholder":"Le message sera affiché lors de la sélection du fournisseur",
-      "client_description":"Description du client",
-      "form_validation":"Veuillez remplir tous les champs requis"
+      "merchant_store_currency": "Devise du magasin du commerçant",
+      "merchant_account_currency": "Devise du compte du commerçant",
+      "conversion_rate": "Taux de conversion",
+      "conversion_rate_required": "Le taux de conversion est requis",
+      "payment_provider_status": "Statut du fournisseur de paiement",
+      "message": "Message",
+      "message_placeholder": "Le message sera affiché lors de la sélection du fournisseur",
+      "client_description": "Description du client",
+      "form_validation": "Veuillez remplir tous les champs requis",
+      "access_code": "Code d'accès",
+      "access_code_required": "Le code d'accès est requis",
+      "enc_key": "Clé Enc",
+      "enc_key_required": "La clé Enc est requise",
+      "phone_number": "Numéro de téléphone",
+      "phone_number_required": "Le numéro de téléphone est requis",
+      "email_address": "Adresse électronique",
+      "email_address_required": "L'adresse électronique est requise",
+      "email_address_invalid": "L'adresse électronique est invalide"
     }
   },
   "payment-providers_snackbar": {
     "provider_data_loaded": "Données des fournisseurs de paiement chargées avec succès",
     "alfalah_mpgs_settings_saved": "Paramètres Alfalah (MPGS) enregistrés avec succès",
-    "abhipay_settings_saved": "Paramètres Abhipay enregistrés avec succès"
+    "abhipay_settings_saved": "Paramètres Abhipay enregistrés avec succès",
+    "apg_settings_saved": "Paramètres Alfalah (APG) enregistrés avec succès",
+    "authorize_settings_saved": "Paramètres Authorize.net enregistrés avec succès",
+    "blinq_settings_saved": "Paramètres BLINQ enregistrés avec succès",
+    "bop_settings_saved": "Paramètres BOP enregistrés avec succès",
+    "ccavenue_settings_saved": "Paramètres CCAVENUE enregistrés avec succès"
   },
   "$vuetify": {
     "open": "Ouvrir",
@@ -399,7 +444,7 @@
     }
   },
   "countries": {
-    "All":"tout",
+    "All": "tout",
     "AF": "Afghanistan",
     "AX": "Åland Islands",
     "AL": "Albania",
